<resources>
    <string name="app_name">Ink Palette</string>
    <string name="action_settings">Settings</string>
    <string name="title_stats">Statistics</string>
    <string name="title_grid">Grid</string>
    <string name="title_game">Ink</string>
    <string name="title_settings">Settings</string>
    <string name="string_null">Empty_String</string>
    <string name="integer_null">Empty_Integer</string>
    <string name="locked">Locked</string>
    <string name="cancel">Cancel</string>
    <string name="buy_ink">Buy with Ink</string>
    <string name="buy_coins">Buy with Coins</string>
    <string name="upgrade">Upgrade</string>
    <string name="spend_quantity_icon">Spend %1$d @</string>
    <string name="unlock">Unlock</string>
    <string name="convert">Convert</string>
    <string name="convert_ink">Convert with Ink</string>
    <string name="upgrade_ink">Upgrade with Ink</string>
    <string name="unlock_ink">Unlock with Ink</string>
    <string name="section">Section</string>
    <string name="not_yet_implemented">Not Yet Implemented</string>
    <string name="not_yet_implemented_message">This Mini Game has not yet been implemented. Wait for Future Releases!</string>
    <string name="ink">Ink</string>
    <string name="stats_button">Buttons clicked</string>
    <string name="stats_button_collect">Button collect clicked</string>
    <string name="stats_button_upgrade">Button upgrade clicked</string>
    <string name="stats_button_confirm">Button confirm clicked</string>
    <string name="stats_button_cancel">Button cancel clicked</string>
    <string name="stats_button_convert">Button convert clicked</string>
    <string name="stats_buy_with_ink">Bought with Ink</string>
    <string name="stats_buy_with_coins">Bought with coins</string>
    <string name="stats_clicked">Statistic touched</string>
    <string name="reset_options">Reset Options</string>
    <string name="reset_game">Reset the whole app</string>
    <string name="reset_collectables">Reset the collectables</string>
    <string name="reset_statistics">Reset all the statistics</string>
    <string name="see_webpages">Visit our Webpages</string>
    <string name="do_not_touch">Don\'t touch</string>
    <string name="do_not_touch_summary">You should not touch this</string>
    <string name="stats_touch_clicked">You touched the forbidden statistic</string>
    <string name="settings_clicked">Settings touched</string>
    <string name="settings_touch_clicked">You touched the forbidden Setting</string>
    <string name="open_options">You are entering the Danger Zone</string>
    <string name="about">About the Game</string>
    <string name="developer">Developer</string>
    <string name="zicons" translatable="false">Zicons</string>
    <string name="profile_name">Profile Name</string>
    <string name="feedback_summary">Report technical issues or suggest new features</string>
    <string name="feedback">Send feedback</string>
    <string name="email_address" translatable="false">mailto:feedback@tenants.ch</string>
    <string name="email_subject">[EN] Ink Palette Feedback</string>
    <string name="email_text">Here you can enter your Feedback or Bug report.</string>
</resources>