<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/title_grid"
    app:startDestination="@+id/navigation_grid">

    <fragment
        android:id="@+id/navigation_grid"
        android:name="ch.tenants.inkpalette.ui.grid.GridFragment"
        android:label="@string/title_grid"
        tools:layout="@layout/fragment_grid" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="ch.tenants.inkpalette.ui.statistics.StatisticsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="ch.tenants.inkpalette.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_section"
        android:name="ch.tenants.inkpalette.ui.section.SectionFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_section" />
</navigation>